Final de cabecera con diseño

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,3 +8,8 @@ body{
     background-color: gray;
     margin: 0 auto;
 }
+
+#cabecera{
+    background-color: #88F;
+    box-shadow: 0 2px 4px 0 black;
+}
